--- a/main.html
+++ b/main.html
@@ -8,6 +8,56 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<table>
+    <thead>
+        <tr>
+            <th>Size</th>
+            <th>Shoulder (cm)</th>
+            <th>Bust (cm)</th>
+            <th>Waist (cm)</th>
+            <th>Hip (cm)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>XS</td>
+            <td>36</td>
+            <td>82</td>
+            <td>64</td>
+            <td>90</td>
+        </tr>
+        <tr>
+            <td>S</td>
+            <td>38</td>
+            <td>86</td>
+            <td>68</td>
+            <td>94</td>
+        </tr>
+        <tr>
+            <td>M</td>
+            <td>40</td>
+            <td>90</td>
+            <td>72</td>
+            <td>98</td>
+        </tr>
+        <tr>
+            <td>L</td>
+            <td>42</td>
+            <td>94</td>
+            <td>76</td>
+            <td>102</td>
+        </tr>
+        <tr>
+            <td>XL</td>
+            <td>44</td>
+            <td>98</td>
+            <td>80</td>
+            <td>106</td>
+        </tr>
+    </tbody>
+</table>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
