--- a/main.html
+++ b/main.html
@@ -12,48 +12,38 @@
 	<table>
     <thead>
         <tr>
-            <th>Size</th>
-            <th>Shoulder (cm)</th>
-            <th>Bust (cm)</th>
-            <th>Waist (cm)</th>
-            <th>Hip (cm)</th>
+            <th>Part</th>
+            <th>XS</th>
+            <th>S</th>
+            <th>M</th>
+            <th>L</th>
+            <th>XL</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>XS</td>
-            <td>36</td>
-            <td>82</td>
-            <td>64</td>
-            <td>90</td>
+            <td>Waist</td>
+            <td>25</td>
+            <td>28</td>
+            <td>30</td>
+            <td>31</td>
+            <td>32</td>
         </tr>
         <tr>
-            <td>S</td>
+            <td>Chest</td>
+            <td>34</td>
+            <td>34</td>
             <td>38</td>
-            <td>86</td>
-            <td>68</td>
-            <td>94</td>
-        </tr>
-        <tr>
-            <td>M</td>
             <td>40</td>
-            <td>90</td>
-            <td>72</td>
-            <td>98</td>
-        </tr>
-        <tr>
-            <td>L</td>
             <td>42</td>
-            <td>94</td>
-            <td>76</td>
-            <td>102</td>
         </tr>
         <tr>
-            <td>XL</td>
-            <td>44</td>
-            <td>98</td>
-            <td>80</td>
-            <td>106</td>
+            <td>Sleeve</td>
+            <td>23</td>
+            <td>24</td>
+            <td>24</td>
+            <td>25</td>
+            <td>25</td>
         </tr>
     </tbody>
 </table>
